[gd_scene load_steps=6 format=3 uid="uid://dtp0qg0ev76kj"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_d3s1c"]
[ext_resource type="Texture2D" uid="uid://ckio01tmvolow" path="res://assets/space invaders sprites.png" id="1_jg3yl"]
[ext_resource type="PackedScene" uid="uid://cuwcot5wqb7vc" path="res://scenes/player_shot.tscn" id="2_n4kpq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v8yv1"]
size = Vector2(13, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22val"]
size = Vector2(15, 5)

[node name="Player" type="CharacterBody2D"]
collision_mask = 129
script = ExtResource("1_d3s1c")
shot_scene = ExtResource("2_n4kpq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_jg3yl")
region_enabled = true
region_rect = Rect2(1, 49, 16, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_v8yv1")

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="InvulnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.02

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_22val")
debug_color = Color(0.792157, 0.427451, 0, 0.419608)

[connection signal="timeout" from="ShotCooldown" to="." method="_on_shot_cooldown_timeout"]
[connection signal="timeout" from="InvulnTimer" to="." method="_on_invuln_timer_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
